# ChangeLog for dev-ruby/jeweler
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/jeweler/ChangeLog,v 1.26 2014/08/15 14:34:10 blueness Exp $

  15 Aug 2014; Anthony G. Basile <blueness@gentoo.org> jeweler-2.0.1.ebuild:
  Keyword ~ppc ~ppc64, bug #511424

*jeweler-2.0.1 (25 May 2014)

  25 May 2014; Hans de Graaff <graaff@gentoo.org> +jeweler-2.0.1.ebuild:
  Version bump. Drop ppc, ppc64, x86 due to new dependencies, bug 511424.

  05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> jeweler-1.8.4.ebuild,
  jeweler-1.8.6.ebuild:
  Remove ree18 and ruby18 target.

  02 Sep 2013; Agostino Sarubbo <ago@gentoo.org> jeweler-1.8.4.ebuild:
  Stable for x86, wrt bug #447586

  31 Aug 2013; Agostino Sarubbo <ago@gentoo.org> jeweler-1.8.4.ebuild:
  Stable for amd64, wrt bug #447586

*jeweler-1.8.6 (17 Jul 2013)

  17 Jul 2013; Hans de Graaff <graaff@gentoo.org> +jeweler-1.8.6.ebuild:
  Version bump. Add additional dependencies listed in the gemspec.

  27 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> jeweler-1.8.4.ebuild:
  Keyword ~ppc wrt #432830

  06 Sep 2012; Hans de Graaff <graaff@gentoo.org> jeweler-1.8.4.ebuild:
  Fix building when jeweler is not installed yet.

  20 Aug 2012; Hans de Graaff <graaff@gentoo.org> -jeweler-1.6.4.ebuild,
  -jeweler-1.8.3.ebuild:
  Cleanup.

*jeweler-1.8.4 (05 Jul 2012)

  05 Jul 2012; Diego E. Pettenò <flameeyes@gentoo.org> +jeweler-1.8.4.ebuild:
  Version bump.

*jeweler-1.8.3 (08 Apr 2012)

  08 Apr 2012; Hans de Graaff <graaff@gentoo.org> +jeweler-1.8.3.ebuild:
  Version bump.

  02 Jan 2012; Hans de Graaff <graaff@gentoo.org> jeweler-1.6.4.ebuild:
  Add ruby19.

  02 Jan 2012; Hans de Graaff <graaff@gentoo.org> -jeweler-1.5.2-r1.ebuild,
  -jeweler-1.6.2.ebuild, -jeweler-1.6.3.ebuild:
  Remove old versions.

  24 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> jeweler-1.6.4.ebuild:
  Marked ~ppc64 wrt #369741

*jeweler-1.6.4 (21 Jul 2011)
