@@ -1,0 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST test_construct-2.0.1.gem 13312 SHA256 f24df07376a93a4cdaf3e953ddb3d2edfe833adeb3a4fc7fbfa02103e8a85ea8 SHA512 c9898beb04d23974dc5b66a9d7bb4a77cd040cc63b724108c4fc4b81f0680d23a9e09b96110c1b5458107d0c2c8714cbed8b2e81611eef8ca7fab92b31014e98 WHIRLPOOL 2a05a32a4dbe9fc6dfd11fa81ef1a58b0a759056311ab6d5074a1f79a0b0a27558d4c58952aabb07a3d1094a203771016b69e1288d1e767b95203e9322416328
+EBUILD test_construct-2.0.1.ebuild 716 SHA256 396412688c1a7754c3b9755149de502d318bd13c05cadba0da2766268eded6b9 SHA512 e365acee6a198882c6c388edf6408e693005ac356cc80d2db6925e58b38e2fa597b6434d39c74adf74e79a03f468f528af4692f26e8dc7eac974f70089dd7c4b WHIRLPOOL e69a3a9044c11a9821d7ded877c5f4f9e9dbd79de5ed5d2e41e64e41491e31b93674af25acb9e328df0673e938697087d835db1efdee47602a0fb0959a130494
+MISC ChangeLog 413 SHA256 90d93bd31f474ba31642917a0d5f58ebf5d869ab78f2f6d1b6a9bb86d6149519 SHA512 5247d8ad1a6e41f4c4e028124698fd9ca3325d379b11cea53d43ea25919d6795ebdbbb99d717c4c4b394945816514cbd5ddac933b73688182b80ba6f8f49c6db WHIRLPOOL 1999b6178291b1f34c9bdeaea60100eac0fb398843763177f81ab3b7c60ad66440296f57619aad092e05d3b1ededd20f0c34326795e5cb6f030e9291862af58a
+MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlTyyW4ACgkQiIP6VqMIqNfv7wD/fi4pU0iyWp6eQOEizxINnJK4
+I/dVfdrXOSPn6WPI1SMA/3RV3EgBlq68Vh2y9HV4NF+fRauofaVjt9Ia2qsj2l1e
+=jS6F
+-----END PGP SIGNATURE-----
