@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=ruby_targets_ruby19? ( doc? ( dev-ruby/yard[ruby_targets_ruby19] ) test? ( dev-ruby/shoulda[ruby_targets_ruby19] dev-ruby/rr[ruby_targets_ruby19] dev-ruby/test_construct[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( doc? ( dev-ruby/yard[ruby_targets_ruby20] ) test? ( dev-ruby/shoulda[ruby_targets_ruby20] dev-ruby/rr[ruby_targets_ruby20] dev-ruby/test_construct[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( doc? ( dev-ruby/yard[ruby_targets_ruby21] ) test? ( dev-ruby/shoulda[ruby_targets_ruby21] dev-ruby/rr[ruby_targets_ruby21] dev-ruby/test_construct[ruby_targets_ruby21] ) ) test? ( ruby_targets_ruby19? ( dev-ruby/rake[ruby_targets_ruby19] >=dev-ruby/git-1.2.5[ruby_targets_ruby19] >=dev-ruby/nokogiri-1.5.10[ruby_targets_ruby19] dev-ruby/github_api[ruby_targets_ruby19] >=dev-ruby/highline-1.6.15[ruby_targets_ruby19] >=dev-ruby/bundler-1.0[ruby_targets_ruby19] dev-ruby/rdoc[ruby_targets_ruby19] dev-ruby/builder[ruby_targets_ruby19] ) ruby_targets_ruby20? ( dev-ruby/rake[ruby_targets_ruby20] >=dev-ruby/git-1.2.5[ruby_targets_ruby20] >=dev-ruby/nokogiri-1.5.10[ruby_targets_ruby20] dev-ruby/github_api[ruby_targets_ruby20] >=dev-ruby/highline-1.6.15[ruby_targets_ruby20] >=dev-ruby/bundler-1.0[ruby_targets_ruby20] dev-ruby/rdoc[ruby_targets_ruby20] dev-ruby/builder[ruby_targets_ruby20] ) ruby_targets_ruby21? ( dev-ruby/rake[ruby_targets_ruby21] >=dev-ruby/git-1.2.5[ruby_targets_ruby21] >=dev-ruby/nokogiri-1.5.10[ruby_targets_ruby21] dev-ruby/github_api[ruby_targets_ruby21] >=dev-ruby/highline-1.6.15[ruby_targets_ruby21] >=dev-ruby/bundler-1.0[ruby_targets_ruby21] dev-ruby/rdoc[ruby_targets_ruby21] dev-ruby/builder[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( doc? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( doc? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( doc? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
+DESCRIPTION=Rake tasks for managing gems and versioning and a generator for creating a new project
+EAPI=5
+HOMEPAGE=http://wiki.github.com/technicalpickles/jeweler
+IUSE=test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 doc test test
+KEYWORDS=~amd64 ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~x64-solaris ~x86-solaris
+LICENSE=MIT
+RDEPEND=ruby_targets_ruby19? ( dev-ruby/rake[ruby_targets_ruby19] >=dev-ruby/git-1.2.5[ruby_targets_ruby19] >=dev-ruby/nokogiri-1.5.10[ruby_targets_ruby19] dev-ruby/github_api[ruby_targets_ruby19] >=dev-ruby/highline-1.6.15[ruby_targets_ruby19] >=dev-ruby/bundler-1.0[ruby_targets_ruby19] dev-ruby/rdoc[ruby_targets_ruby19] dev-ruby/builder[ruby_targets_ruby19] ) ruby_targets_ruby20? ( dev-ruby/rake[ruby_targets_ruby20] >=dev-ruby/git-1.2.5[ruby_targets_ruby20] >=dev-ruby/nokogiri-1.5.10[ruby_targets_ruby20] dev-ruby/github_api[ruby_targets_ruby20] >=dev-ruby/highline-1.6.15[ruby_targets_ruby20] >=dev-ruby/bundler-1.0[ruby_targets_ruby20] dev-ruby/rdoc[ruby_targets_ruby20] dev-ruby/builder[ruby_targets_ruby20] ) ruby_targets_ruby21? ( dev-ruby/rake[ruby_targets_ruby21] >=dev-ruby/git-1.2.5[ruby_targets_ruby21] >=dev-ruby/nokogiri-1.5.10[ruby_targets_ruby21] dev-ruby/github_api[ruby_targets_ruby21] >=dev-ruby/highline-1.6.15[ruby_targets_ruby21] >=dev-ruby/bundler-1.0[ruby_targets_ruby21] dev-ruby/rdoc[ruby_targets_ruby21] dev-ruby/builder[ruby_targets_ruby21] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 )
+SLOT=0
+SRC_URI=mirror://rubygems/jeweler-2.0.1.gem
+_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	d4f8591e9b20b106327e9d143eb13da5	ruby-ng	c79a9fd7644eefe8009be02a82648e1f	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=0ebc6e5d7e7e84a92882fcd0f9a4bc4c
